--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -26,13 +26,13 @@
     "## Define the Following:\n",
     "You can add image, diagrams, whatever you need to ensure that you understand the concepts below.\n",
     "\n",
-    "### Input Layer:\n",
-    "### Hidden Layer:\n",
-    "### Output Layer:\n",
-    "### Neuron:\n",
-    "### Weight:\n",
-    "### Activation Function:\n",
-    "### Node Map:\n",
+    "### Input Layer:  Input neurones,  they'll be two input neurons that taking our model or each of the raw data\n",
+    "### Hidden Layer: Where our ensemble of predictive models is stored\n",
+    "### Output Layer: one output neuron for each variable we want to predict\n",
+    "### Neuron: cell\n",
+    "### Weight: numbers, paramters the network connection between input neuron and second layer neuron should have\n",
+    "### Activation Function: a combination (sum) of all activations from first layer and their weights, negatives used to show dark nodes (sigmoid function) thats comes up with a number between 0 and 1, well for each neuron!\n",
+    "### Node Map: diagrams showcasing inputs, hiden cells, and output layers \n",
     "### Perceptron:\n"
    ]
   },
@@ -55,7 +55,7 @@
     "id": "PlSwIJMC0A8F"
    },
    "source": [
-    "#### Your Answer Here"
+    "#### Let's say We have bunch of numbers that we make into an arrays then a vector, basically input layer takes all that infomation in numbers, depending on the weights it'll lit up the next layer minus teh bias through the activation function calculation later (but for faster training the relu functions makes it faster and simpler to implement!) all the way to the ouput layer."
    ]
   },
   {
@@ -77,11 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "data = { 'x1': [0,1,0,1],\n",
     "         'x2': [0,0,1,1],\n",
     "         'y':  [1,1,1,0]\n",
@@ -92,24 +93,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Sgh7VFGwnXGH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  1\n",
+       "1   1   0  1\n",
+       "2   0   1  1\n",
+       "3   1   1  0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##### Your Code Here #####\n",
-    "\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "correct_outputs = [[1], [1], [1], [0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    sx = sigmoid(x)\n",
+    "    return sx * (1 - sx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialze random weights for inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = 2 * np.random.random((3,1)) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.53937821],\n",
+       "       [ 0.60096248],\n",
+       "       [-0.44532557]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the weighted sum of inputs ans weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.44532557],\n",
+       "       [ 0.09405264],\n",
+       "       [ 0.1556369 ],\n",
+       "       [ 1.14034069]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_sum = np.dot(df, weights)\n",
+    "weighted_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.39047273],\n",
+       "       [0.52349584],\n",
+       "       [0.53883087],\n",
+       "       [0.75774218]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Activated value \n",
+    "\n",
+    "activated_output = sigmoid(weighted_sum)\n",
+    "activated_output "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.60952727],\n",
+       "       [ 0.47650416],\n",
+       "       [ 0.46116913],\n",
+       "       [-0.75774218]])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error = correct_outputs - activated_output\n",
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.24070772],\n",
+       "       [0.233625  ],\n",
+       "       [0.23269712],\n",
+       "       [0.21728845]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adjusted = error = sigmoid_derivative(activated_output)\n",
+    "adjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.99029166],\n",
+       "       [1.05094805],\n",
+       "       [0.26170426]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights += np.dot(df.T, adjusted)\n",
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights after training\n",
+      "[[-4.95403962]\n",
+      " [-4.95395383]\n",
+      " [15.13425447]]\n",
+      "Output after training\n",
+      "[[9.99999733e-01]\n",
+      " [9.99962088e-01]\n",
+      " [9.99962091e-01]\n",
+      " [4.97732313e-05]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for iteration in range (100000):\n",
+    "    weighted_sum = np.dot(df, weights)\n",
+    "    \n",
+    "    activated_output = sigmoid(weighted_sum)\n",
+    "    \n",
+    "    error = correct_ouputs  - activated_output\n",
+    "    adjustments = error * sigmoid_derivative(activated_output)\n",
+    "    \n",
+    "    weights += np.dot(df.T, adjustments)\n",
+    " \n",
+    "print('weights after training')\n",
+    "print(weights)\n",
+    "\n",
+    "print('Output after training')\n",
+    "print(activated_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#and that ladies and gentlmen is 99%"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +465,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>148</td>\n",
        "      <td>72</td>\n",
@@ -175,7 +477,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>85</td>\n",
        "      <td>66</td>\n",
@@ -187,7 +489,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>8</td>\n",
        "      <td>183</td>\n",
        "      <td>64</td>\n",
@@ -199,7 +501,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>89</td>\n",
        "      <td>66</td>\n",
@@ -211,7 +513,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>137</td>\n",
        "      <td>40</td>\n",
@@ -242,7 +544,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,54 +571,188 @@
     "\n",
     "feats = list(diabetes)[:-1]\n",
     "\n",
-    "X = ..."
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "X = scaler.fit_transform(diabetes[feats])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 1., 0., 1., 0., 1., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0., 0., 1., 0., 0.,\n",
+       "       0., 0., 0., 1., 1., 1., 0., 0., 0., 1., 0., 1., 0., 0., 1., 0.])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = diabetes.values[:,-1]\n",
+    "y[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-W0tiX1F1hh2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-113-39dc2c21bb9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m##### Update this Class #####\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPerceptron\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mniter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-113-39dc2c21bb9e>\u001b[0m in \u001b[0;36mPerceptron\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mniter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0;31m# Weighted sum of inputs / weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mweighted_sum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
    "source": [
     "##### Update this Class #####\n",
     "\n",
-    "class Perceptron(object):\n",
+    "class Perceptron:\n",
     "    \n",
     "    def __init__(self, niter = 10):\n",
-    "    self.niter = niter\n",
+    "        self.niter = 'niter'\n",
     "    \n",
     "    def __sigmoid(self, x):\n",
-    "        return None\n",
+    "        return 1 / (1 + np.exp(-x))\n",
     "    \n",
     "    def __sigmoid_derivative(self, x):\n",
-    "        return None\n",
+    "        sx = sigmoid(x)\n",
+    "        return sx * (1 - sx)\n",
     "\n",
     "    def fit(self, X, y):\n",
-    "    \"\"\"Fit training data\n",
-    "    X : Training vectors, X.shape : [#samples, #features]\n",
-    "    y : Target values, y.shape : [#samples]\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Randomly Initialize Weights\n",
-    "    weights = ...\n",
+    "        \"\"\"Fit training data\n",
+    "        X : Training vectors, X.shape : [#samples, #features]\n",
+    "        y : Target values, y.shape : [#samples]\n",
+    "        \"\"\"\n",
+    "#       add in bias\n",
+    "#       X = np.append(X_, np.ones_like(X_[0]), axis=1)\n",
+    "        # Randomly Initialize Weights\n",
+    "        self.weights = np.random.random((X.shape[1], 1))\n",
     "\n",
     "    for i in range(self.niter):\n",
     "        # Weighted sum of inputs / weights\n",
-    "\n",
+    "        weighted_sum = np.dot(X, self.weights)\n",
     "        # Activate!\n",
-    "\n",
+    "        activated_ouput = self.__sigmoid(weighted_sum)\n",
     "        # Cac error\n",
-    "\n",
+    "        error = y - activated_output\n",
     "        # Update the Weights\n",
     "\n",
     "\n",
     "    def predict(self, X):\n",
-    "    \"\"\"Return class label after unit step\"\"\"\n",
-    "        return None"
+    "        \"\"\"Return class label after unit step\"\"\"\n",
+    "    \n",
+    "        weighted_sum = np.dot(X, self.weights)\n",
+    "        activated_output = self.__signoid(weighted_sum)\n",
+    "        \n",
+    "        return activated_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Perceptron()\n",
+    "p.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.perdict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y - p.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perceptron:\n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        self.inputs = 2 \n",
+    "        self.outputs = 1\n",
+    "        \n",
+    "        self.weights = np.random.randn(self.inputs, sefl.outputs)\n",
+    "        bias = 1\n",
+    "        \n",
+    "    def sigmoid(self, s):\n",
+    "        return 1 / (1+np.exp(-s))\n",
+    "    \n",
+    "    def sigmoidPrime(self, s):\n",
+    "        return s * (1 - s)\n",
+    "    \n",
+    "    def feed_forward(self, X):\n",
+    "        \"\"\" Calculate the NN inference using feed forward aka predict\"\"\"\n",
+    "        \n",
+    "        # Weighted sum of inputs +> hidden layer\n",
+    "        self.weighted_sum = np.dot(X, self.weights) + bias\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
    ]
   },
   {
@@ -357,9 +793,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
